# hlpr

./: .dockerignore  .gitignore  .hlpr.toml  .hlpr.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  hlpr.db  meeting_1_summary.md  pyproject.toml  test_artifact_save.py  test_data_preview.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.hlpr/plugins/: demo_commands.py
app/: __init__.py  main.py
app/routers/: __init__.py
app/schemas/: __init__.py
artifacts/meeting/: metadata.json  optimized_program.json
artifacts/meeting/optimized_program/: program.pkl
artifacts/meeting/optimized_program_dspy/: metadata.json  program.pkl
docker/postgres/: Dockerfile  init-vector.sql
docker/postgres/init/: init-vector.sql
dspy/: interfaces.py
dspy/pipelines/: summarization.py
scripts/: dev.sh  docker-exec.sh  setup.sh
src/: __init__.py  main.py
src/hlpr/: __init__.py  cli.py  main.py
src/hlpr/cli/: __init__.py  base.py  context.py  development.py  executor.py  health.py  meeting.py  plugins.py  preset_commands.py  presets.py  profile_commands.py  profiles.py  setup.py  task_commands.py  tasks.py  templates.py  training.py  wizard.py  workflow_commands.py  workflows.py  workspace.py
src/hlpr/core/: cache_manager.py  config.py  errors.py  logging.py  optimization.py  redis_client.py  settings.py
src/hlpr/db/: base.py  dependencies.py  models.py  repositories.py
src/hlpr/dspy/: dataset.py  metrics.py  optimizer.py  programs.py  signatures.py
src/routers/: example.py
src/services/: __init__.py
test_artifacts/meeting/: optimized_program.json
tests/: test_artifact_save.py  test_data_preview.py  test_mipro_injection.py  test_redis.py
tests/cli/: test_plugins.py  test_templates.py
tests/dspy/: test_dataset.py
tests/routers/: test_example.py  test_health.py  test_meetings.py
tests/services/: test_meeting_pipeline.py  test_summarization_pipeline.py
(+17 files in other folders)
